// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Object metadata update should fail when labelIdentifier is not a TEXT or NAME field 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_OBJECT_INPUT",
                "message": "Label identifier field metadata must be a TEXT or FULL_NAME field type",
                "userFriendlyMessage": "Label identifier field metadata must be a TEXT or FULL_NAME field type",
                "value": "NUMBER",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "namePlural": "whatevers",
              "nameSingular": "whatever",
            },
            "type": "update_object",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while updating object",
    "name": "GraphQLError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a known field metadata id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_OBJECT_INPUT",
                "message": "Label identifier field metadata not found in field metadata list",
                "userFriendlyMessage": "Label identifier field metadata not found in field metadata list",
                "value": "42422020-f49c-4159-8751-76a24f47b360",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "namePlural": "whatevers",
              "nameSingular": "whatever",
            },
            "type": "update_object",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while updating object",
    "name": "GraphQLError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a uuid 1`] = `
[
  {
    "extensions": {
      "code": "GRAPHQL_VALIDATION_FAILED",
      "http": {
        "status": 400,
      },
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid UUID",
    "name": "ValidationError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is null 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "MISSING_CUSTOM_OBJECT_DEFAULT_LABEL_IDENTIFIER_FIELD",
                "message": "Label identifier field metadata is required",
                "userFriendlyMessage": "Label identifier field metadata is required",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "namePlural": "whatevers",
              "nameSingular": "whatever",
            },
            "type": "update_object",
          },
        ],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while updating object",
    "name": "GraphQLError",
  },
]
`;
